# SPOR

./: CMakeLists.txt  DLIBConfig.cmake  README.md  SPOR_GITHUB.pro  andnode.cpp  andnode.h  classrelatedfeaturenode.cpp  classrelatedfeaturenode.h  complementnode.cpp  complementnode.h  featurenode.cpp  featurenode.h  fuzzydatatype.cpp  fuzzydatatype.h  fuzzyevaluator.cpp  fuzzyevaluator.h  fuzzyfunctions.cpp  fuzzyfunctions.h  fuzzyobjectproperty.cpp  fuzzyobjectproperty.h  helperfunctions.cpp  helperfunctions.h  logicnode.cpp  logicnode.h  machinelearningnode.cpp  machinelearningnode.h  main.cpp  ontologyclass.cpp  ontologyclass.h  ontologycontainer.cpp  ontologycontainer.h  ontologydata.cpp  ontologydata.h  ontologyparser.cpp  ontologyparser.h  ornode.cpp  ornode.h  superclassnode.cpp  superclassnode.h  treenode.cpp  (+1 more)
andnode/: andnode.cpp  andnode.hxx
classrelatedfeaturenode/: classrelatedfeaturenode.cpp  classrelatedfeaturenode.hxx
complementnode/: complementnode.cpp  complementnode.hxx
crispdatatype/: crispdatatype.cpp  crispdatatype.hxx
crispfeaturenode/: crispfeaturenode.cpp  crispfeaturenode.hxx
datatype/: datatype.cpp  datatype.hxx
featurenode/: featurenode.cpp  featurenode.hxx
fuzzydatatype/: fuzzydatatype.cpp  fuzzydatatype.hxx
fuzzyevaluator/: fuzzyevaluator.cpp  fuzzyevaluator.hxx
fuzzyfunctions/: fuzzyfunctions.cpp  fuzzyfunctions.hxx
fuzzyobjectproperty/: fuzzyobjectproperty.cpp  fuzzyobjectproperty.hxx
helperfunctions/: helperfunctions.cpp
logicnode/: logicnode.cpp  logicnode.hxx
machinelearning/: machinelearningdatatype.cpp  machinelearningdatatype.h  machinelearningdatatype.hxx
machinelearning/CDBN/: BoostCDBN.pro  CDBN.cpp  CDBN.h  CDBN.hxx  CRBM.cpp  CRBM.h  CRBM.hxx  DBN.cpp  DBN.h  DBN.hxx  HiddenLayer.cpp  HiddenLayer.h  HiddenLayer.hxx  LogisticRegression.cpp  LogisticRegression.h  LogisticRegression.hxx  RBM.cpp  RBM.h  RBM.hxx  functions.cpp  functions.h  functions.hxx  main.cpp
machinelearning/SVM/: svm.cpp  svm.hxx
machinelearningnode/: machinelearningnode.cpp  machinelearningnode.hxx
ontologyclass/: ontologyclass.cpp  ontologyclass.hxx
ontologycontainer/: ontologycontainer.cpp  ontologycontainer.hxx
ontologydata/: ontologydata.cpp  ontologydata.hxx
ontologyparser/: ontologyparser.cpp  ontologyparser.hxx
ornode/: ornode.cpp  ornode.hxx
superclassnode/: superclassnode.cpp  superclassnode.hxx
treenode/: treenode.cpp  treenode.hxx
